tests/baselines/reference/objectLiteralFunctionArgContextualTyping2.errors.txt
objectLiteralFunctionArgContextualTyping2.ts(8,6): error TS2353: Object literal may only specify known properties, and 'hello' does not exist in type 'I2'.
objectLiteralFunctionArgContextualTyping2.ts(9,4): error TS2345: Argument of type '{ value: string; }' is not assignable to parameter of type 'I2'.
  Property 'doStuff' is missing in type '{ value: string; }' but required in type 'I2'.
objectLiteralFunctionArgContextualTyping2.ts(10,17): error TS2353: Object literal may only specify known properties, and 'what' does not exist in type 'I2'.
objectLiteralFunctionArgContextualTyping2.ts(11,6): error TS2322: Type '(s: any) => any' is not assignable to type '() => string'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.
objectLiteralFunctionArgContextualTyping2.ts(12,6): error TS2322: Type '(s: string) => string' is not assignable to type '() => string'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.
objectLiteralFunctionArgContextualTyping2.ts(13,17): error TS2322: Type '(s: any) => any' is not assignable to type '() => string'.
  Target signature provides too few arguments. Expected 1 or more, but got 0.


==== objectLiteralFunctionArgContextualTyping2.ts (6 errors) ====
    interface I2 {
        value: string;
        doStuff: (t: string) => string;
    }
    
    function f2(args: I2) { }
    
    f2({ hello: 1 }) 
         ~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'hello' does not exist in type 'I2'.
    f2({ value: '' })
       ~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ value: string; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'doStuff' is missing in type '{ value: string; }' but required in type 'I2'.
!!! related TS2728 objectLiteralFunctionArgContextualTyping2.ts:3:5: 'doStuff' is declared here.
    f2({ value: '', what: 1 }) 
                    ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'what' does not exist in type 'I2'.
    f2({ toString: (s) => s }) 
         ~~~~~~~~
!!! error TS2322: Type '(s: any) => any' is not assignable to type '() => string'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
    f2({ toString: (s: string) => s }) 
         ~~~~~~~~
!!! error TS2322: Type '(s: string) => string' is not assignable to type '() => string'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.
    f2({ value: '', toString: (s) => s.uhhh }) 
                    ~~~~~~~~
!!! error TS2322: Type '(s: any) => any' is not assignable to type '() => string'.
!!! error TS2322:   Target signature provides too few arguments. Expected 1 or more, but got 0.